[gd_scene load_steps=14 format=2]

[ext_resource path="res://Menu/RouletteScene/RouletteScene.gd" type="Script" id=1]
[ext_resource path="res://Assets/Backgrounds/spongebob-house-627x43myjnudtc21.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/fonts/Angeme-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/spinWheel.png" type="Texture" id=4]
[ext_resource path="res://Assets/pointer.png" type="Texture" id=5]
[ext_resource path="res://Assets/buttons/restartBtn.png" type="Texture" id=6]
[ext_resource path="res://Assets/buttons/exitBtn.png" type="Texture" id=7]
[ext_resource path="res://Assets/buttons/adBtn.png" type="Texture" id=8]
[ext_resource path="res://Assets/audios/muzyka-iz-multfilma-spanch-gubka-bob-kvadratnye-shtany.mp3" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 50
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 35
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 3 )

[node name="RouletteScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 512, 301 )
scale = Vector2( 0.533333, 0.553704 )
texture = ExtResource( 2 )

[node name="roulette" type="Sprite" parent="."]
physics_interpolation_mode = 2
position = Vector2( 528, 312 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="pointer" type="Sprite" parent="."]
position = Vector2( 528, 144 )
rotation = -0.0481025
scale = Vector2( 0.365909, 0.459079 )
texture = ExtResource( 5 )

[node name="winText" type="Label" parent="."]
margin_left = 688.0
margin_top = 216.0
margin_right = 948.0
margin_bottom = 267.0
custom_fonts/font = SubResource( 1 )
text = "Вы выиграли:
"

[node name="available_spinsText" type="Label" parent="."]
margin_left = 8.0
margin_top = 232.0
margin_right = 305.0
margin_bottom = 268.0
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Доступно прокрутов:"

[node name="coinsText" type="Label" parent="."]
margin_left = 16.0
margin_top = 368.0
margin_right = 193.0
margin_bottom = 419.0
custom_colors/font_color = Color( 1, 0.411765, 0.411765, 1 )
custom_fonts/font = SubResource( 3 )
text = "Монеты:"

[node name="spinBtn" type="TouchScreenButton" parent="."]
position = Vector2( 552, 472 )
scale = Vector2( 0.690648, 0.624114 )
normal = ExtResource( 6 )
pressed = ExtResource( 6 )

[node name="exitBtn" type="TouchScreenButton" parent="."]
position = Vector2( 408, 464 )
scale = Vector2( 0.701493, 0.647059 )
normal = ExtResource( 7 )
pressed = ExtResource( 7 )

[node name="addSpin" type="TouchScreenButton" parent="."]
position = Vector2( 928, 6.10352e-05 )
scale = Vector2( 0.145675, 0.182195 )
normal = ExtResource( 8 )
pressed = ExtResource( 8 )

[node name="Label" type="Label" parent="."]
margin_left = 904.0
margin_top = 88.0
margin_right = 1102.0
margin_bottom = 124.0
custom_colors/font_color = Color( 1, 0.305882, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "+1 Прокрутка"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[connection signal="pressed" from="spinBtn" to="." method="spinBtn_pressed"]
[connection signal="pressed" from="exitBtn" to="." method="exitBtn_pressed"]
[connection signal="pressed" from="addSpin" to="." method="addSpin_pressed"]
